Correct alignment

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ nav li a {
     display: inline-block;
     height: 200px;
     width: 200px;
-    margin: 50px 25px;
+    margin: 50px 20px;
     border-radius: 50%;
     filter: brightness(0.9) grayscale(100%);
     border: solid #2d21a3;
@@ -130,7 +130,7 @@ nav li a {
 .founders h3, h4 {
      display: inline-block;
      width: 190px;
-     margin: 0 30px;
+     margin: 0 25px;
      text-align: center;
      font-family: "Frank Ruhl Libre", serif;
      font-weight: 400;
@@ -195,7 +195,7 @@ nav li a {
 }
 
 .partners img {
-    margin: 60px 20px;
+    margin: 60px 10px;
     height: 100px;
     display: inline-block;
 }
